test/ddc-spec/error/01-ErrorExp/04-ImportDuplicate/Test.ds

-- ISSUE #408: No source locations for import and export errors.
module Test

import foreign c value
 foo : Nat# -> Nat#

import foreign c value
 foo : Word32# -> Nat#

where
